# feed

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  CHANGES  Makefile  README.md  feed.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack.yaml
scripts/: hindent-validate.sh  hindent.sh
src/Data/Text/: Util.hs
src/Data/XML/: Compat.hs
src/Text/Atom/: Feed.hs  Pub.hs
src/Text/Atom/Feed/: Export.hs  Import.hs  Link.hs  Validate.hs
src/Text/Atom/Pub/: Export.hs
src/Text/DublinCore/: Types.hs
src/Text/Feed/: Constructor.hs  Export.hs  Import.hs  Query.hs  Translate.hs  Types.hs  Util.hs
src/Text/RSS/: Export.hs  Import.hs  Syntax.hs
src/Text/RSS1/: Export.hs  Import.hs  Syntax.hs  Utils.hs
tests/: Example.hs  ImportExport.hs  Main.hs  doctest-driver.hs
tests/Example/: CreateAtom.hs
tests/Text/Atom/: Tests.hs
tests/Text/Atom/Validate/: Tests.hs
tests/Text/Feed/Util/: Tests.hs
tests/Text/RSS/: Equals.hs  Tests.hs  Utils.hs
tests/Text/RSS/Export/: Equals.hs  Tests.hs  Utils.hs
tests/Text/RSS/Import/: Tests.hs
tests/files/: atom.xml  import_export_atom.xml
