name:                feed
version:             0.3.9.3
license:             BSD3
license-file:        LICENSE
category:            Text
synopsis:            Interfacing with RSS (v 0.9x, 2.x, 1.0) + Atom feeds.
description:         Interfacing with RSS (v 0.9x, 2.x, 1.0) + Atom feeds.
                     .
                     To help working with the multiple feed formats we've
                     ended up with, this set of modules provides parsers,
                     pretty printers and some utility code for querying
                     and just generally working with a concrete representation
                     of feeds in Haskell.
author:              Sigbjorn Finne <sof@forkIO.com>
maintainer:          Adam Bergmark <adam@bergmark.nl>
homepage:            https://github.com/bergmark/feed
bug-reports:         https://github.com/bergmark/feed/issues
cabal-version:       >= 1.6
build-type:          Simple
extra-Source-Files:
  tests/Main.hs
  tests/rss20.xml
  README.md
  CHANGELOG.md

source-repository head
  type:              git
  location:          https://github.com/bergmark/feed.git

library
  ghc-options:       -Wall
  exposed-modules:
    Text.RSS.Syntax
    Text.RSS.Import
    Text.RSS.Export
    Text.RSS1.Syntax
    Text.RSS1.Import
    Text.RSS1.Utils
    Text.RSS1.Export
    Text.DublinCore.Types
    Text.Atom.Feed
    Text.Atom.Feed.Export
    Text.Atom.Feed.Import
    Text.Atom.Feed.Link
    Text.Atom.Feed.Validate
    Text.Atom.Pub
    Text.Atom.Pub.Export
    Text.Feed.Import
    Text.Feed.Types
    Text.Feed.Export
    Text.Feed.Query
    Text.Feed.Constructor
    Text.Feed.Translate
    Text.Feed.Util
  build-depends:
      base >= 4 && < 4.9
    , old-locale == 1.0.*
    , old-time >= 1 && < 1.2
    , time < 1.6
    , time-locale-compat == 0.1.*
    , utf8-string < 1.1
    , xml >= 1.2.6 && < 1.3.15
